# 3D-LBP

./: CMakeLists.txt  README.md  main.cpp
3DLBP/: 3d_lbp_main.cpp  CMakeLists.txt
MeshSim/: CMakeLists.txt  sim_main.cpp
