CMAKE_MINIMUM_REQUIRED(VERSION 3.10)
PROJECT(3DLBP)

SET(CMAKE_CXX_STANDARD 11)

FIND_PACKAGE(Open3D REQUIRED)
FIND_PACKAGE(OpenCV REQUIRED)
FIND_PACKAGE(Eigen3 REQUIRED)

INCLUDE_DIRECTORIES(
        ${Open3D_INCLUDE_DIRS}
        ${OpenCV_INCLUDE_DIRS}
        ${EIGEN3_INCLUDE_DIRS}
)

LINK_DIRECTORIES(
        ${Open3D_LIBRARY_DIRS}
        ${OpenCV_LIBRARY_DIRS}
        ${EIGEN3_LIBRARY_DIRS}
)

ADD_EXECUTABLE(demo main.cpp)

TARGET_LINK_LIBRARIES(demo
        ${Open3D_LIBRARIES}
        ${OpenCV_LIBRARIES}
        )
